# object-shapes-cvpr18

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  WORKSPACE  nix_build.sh
.clion/: .bazelproject
cpp/: CMakeLists.txt
cpp/apps/: BUILD  CMakeLists.txt  depth2mesh.cc  eval.cc  generate_dataset.cc  generate_metadata.cc  meshdist.cc  recon.cc  scene.cc  train.cc  voxel_iou.cc
cpp/ctypes/: BUILD  CMakeLists.txt  render_object.cc  single_batch_loader.cc
cpp/egl/: CMakeLists.txt  egl_renderer.cc  egl_renderer.h  hello.cc  hello.h  hello_test.cc
cpp/lib/: BUILD  CMakeLists.txt  batch_queue.cc  batch_queue.h  benchmark.cc  benchmark.h  camera.cc  camera.h  common.h  data_io.cc  data_io.h  database.cc  database.h  egl_rendering.cc  egl_rendering.h  file_io.cc  file_io.h  flags.cc  flags.h  fssr_utils.cc  fssr_utils.h  meshdist.cc  meshdist.h  multiprocessing.cc  multiprocessing.h  mvshape_helpers.cc  mvshape_helpers.h  random_utils.cc  random_utils.h  resources.cc  resources.h  single_batch_loader.cc  single_batch_loader.h  string_utils.cc  string_utils.h  tf_utils.cc  tf_utils.h  transforms.cc  transforms.h  voxel.cc  (+1 more)
cpp/tests/: BUILD  CMakeLists.txt  benchmark_test.cc  camera_test.cc  database_test.cc  dataset_io_test.cc  egl_rendering_test.cc  egl_test.cc  egl_test_app.cc  file_io_test.cc  fssr_utils_test.cc  multiprocessing_test.cc  random_utils_test.cc  resources_test.cc  single_batch_loader_test.cc  string_utils_test.cc  tensorflow_test.cc  test_main.cc  test_utils.cc  test_utils.h  tf_utils_test.cc  voxel_test.cc
docker/: configure_tensorflow.sh  install_tensorflow.sh
docs/: notes.md
proto/: BUILD  CMakeLists.txt  dataset.proto
python/docs/: readme.md
python/mvshape/: __init__.py  benchmark.py  camera_utils.py  db_model.py  eval_out_reader.py  io_utils.py  log.py  mesh_utils.py  meshdist.py  mve.py  pascal.py  pcl_utils.py  render_for_cnn_utils.py  render_object.py  shapes.py  tf_utils.py  torch_utils.py
python/mvshape/data/: dataset.py  parallel_reader.py
python/mvshape/models/: decoder.py  encoder.py  encoderdecoder.py  eval_utils.py  model_visualization.py
python/mvshape/notebook_helpers/: old_shrec12_qualitative.py
python/mvshape/proto/: dataset_pb2.py
python/mvshape/tf_models/: depth_6_views.py
python/scratch/: argparse_bool.py  blender_camera.py  data_loader_memory.py  download_rendered_images.py  eval_fused_mesh.py  extract_and_save_old_results.py  object_centered_dataset.py  recon.py  small_trainable_model.py  validating_new_renderings.py
python/scripts/: pascal_mv6_eval.py  pascal_mv6_make_figures.py  populate_pascal3d_database.py  populate_rgb_database.py  render_for_cnn_make_square_images.py  render_for_cnn_resize_and_overlay.py  resize_and_compress_rgb.py  shrec12_mv6_eval.py  train.py
python/tests/: test_data_reader.py  test_io_utils.py  test_pcl_utils.py  test_render_for_cnn_utils.py
resources/: BUILD
resources/data/database/: shrec12.sqlite
resources/data/mesh/shapenetcore/02691156/1c87b854cceb778615aa5b227c027ee0/: model.mtl
resources/data/mesh/shrec12/TestSubset/NovelClass/ApartmentHouse_aligned/: D00045_out.off
resources/data/mesh/shrec12/TestSubset/NovelClass/Bus_aligned/: D00084_out.off
resources/data/mesh/shrec12/TestSubset/NovelModel/Bed_aligned/: D00322_out.off
resources/data/mesh/shrec12/TestSubset/NovelModel/Biplane_aligned/: D00373_out.off
resources/data/mesh/shrec12/TestSubset/NovelView/Bed_aligned/: D00121_out.off
resources/data/mesh/shrec12/TestSubset/NovelView/Bookset_aligned/: D01050_out.off
resources/data/mesh/shrec12/Train2/NovelModel/Bed_aligned/: D00031_out.off
resources/data/mesh/shrec12/Train2/NovelModel/Biplane_aligned/: D00069_out.off
resources/data/mesh/shrec12/Validation/NovelClass/Bicycle_aligned/: D00016_out.off
resources/data/mesh/shrec12/Validation/NovelModel/Bed_aligned/: D00217_out.off
resources/data/mesh/shrec12/Validation/NovelModel/Biplane_aligned/: D00277_out.off
resources/data/mesh/shrec12/Validation/NovelView/Bed_aligned/: D00110_out.off
resources/data/mesh/shrec12/Validation/NovelView/Biplane_aligned/: D00132_out.off
resources/data/mesh/shrec12/ValidationSubset/NovelClass/Biped_aligned/: D00025_out.off
resources/data/mesh/shrec12/ValidationSubset/NovelModel/ClassicPiano_aligned/: D00233_out.off
resources/data/mesh/shrec12/ValidationSubset/NovelModel/Computer_aligned/: D01067_out.off
resources/data/mesh/shrec12/ValidationSubset/NovelView/Bed_aligned/: D00184_out.off
resources/data/mesh/shrec12/ValidationSubset/NovelView/Bookset_aligned/: D01038_out.off
resources/objects/: plane.ply  torus.ply
resources/objects/1a74a83fa6d24b3cacd67ce2c72c02e/: model.mtl
resources/render_for_cnn/syn_images_cropped/02691156/1c87b854cceb778615aa5b227c027ee0/: params.txt
resources/shaders/: object.frag  object.geom  object.vert
resources/tf_models/small_trainable_model/: saved_model.pbtxt
resources/tf_models/small_trainable_model/variables/: variables.data-00000-of-00002  variables.index
tools/: bazel.rc  build_all.sh  check_datasets.sh  download_trained_models.sh  run_all_tests.sh  sync_dshin0.sh
